# Advent-of-code-2024

./: README.md  pyproject.toml
q1/: part1.py  part2.py
q10/: part1.py  part2.py
q11/: part1.py  part2.py
q12/: part1.py  part2.py
q13/: part1.py  part2.py  test2
q14/: part1.py  part2.py
q15/: part1.py  part2.py
q16/: new_part2.py  part1.py  part2.py
q17/: part1.py  part2.py
q18/: part1.py  part2.py
q19/: part1.py  part2.py
q2/: part1.py  part2.py
q20/: part1.py  part2.py
q21/: part1.py  part2.py
q22/: part1.py  part2.py
q23/: part1.py  part2.py
q24/: part1-old.py  part1.py  part2.py
q25/: part1.py
q3/: part1.py  part2.py
q4/: part1.py  part2.py
q5/: part1.py  part2.py
q6/: part1.py  part2.py
q7/: part1.py  part2.py
q7/part1/: main.py
q7/part2/: main.py
q8/: part1.py  part2.py
q9/: part1.py  part2.py
