[tool.poetry]
name = "2024"
version = "0.1.0"
description = ""
authors = ["Wonjoon Seol <wonjoon.seol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
matplotlib = "^3.10.0"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
